 (Format: Year/Month/Day)
Changes for 1.0rc3:
*07/03/11:
   * Fixed display bug with ParentRelative menu highlight (thanks Julien Trolet)
     FbTk/Menu.cc
*07/03/10:
   * Autogrouped windows weren't getting added to the workspace menu (Mark)
     Screen.cc
   * Changed default toolbar layer to DOCK, as a large window could render
     fluxbox useless to a new user otherwise (Mark)
     Toolbar.cc doc/asciidoc/fluxbox.txt
   * Fixed changing iconbar text padding requiring a toolbar refresh (Mark)
     IconbarTool.cc
   * Fixed stealing focus from unmanaged windows (Mark)
     fluxbox.cc
*07/03/07:
   * Fixed a little bug with reverting focus after closing menu (Mark)
     FbTk/Menu.cc
*07/03/06:
   * Changed some handling of focusing/raising transient windows (Mark)
     Window.cc FocusControl.cc
   * session.screen<N>.defaultDeco now allows same strings as apps file (Mark)
     Screen.cc/hh Window.cc Remember.cc/hh
*07/03/03:
   * Added typeahead support to menus (patch by Philipp Goedl, modified by Mark
     and Matteo Galiazzo)
     - Added new style item menu.frame.underlineColor: <color> for displaying
       matching items
     FbTk/Menu.cc/hh MenuItem.cc/hh MenuTheme.cc/hh Makefile.am and added
     FbTk/ITypeAheadable.hh TypeAhead.hh SearchResult.cc/hh
*07/03/02:
   * Added support for keypad enter key in menu (Mark)
     FbTk/Menu.cc
*07/02/28:
   * Fixed some strange menu behaviors (Mark)
     FbTk/Menu.cc/hh
*07/02/27:
   * Respect external tabs in ArrangeWindows (thanks to Tomas Janousek <tomi
     at nomi dot cz>
     WorkspaceCmd.cc
*07/02/25:
   * Update systemtray alpha along with toolbar alpha (Mark)
     Systemtray.cc/hh
*07/02/23:
   * Update EWMH state atom when maximizing windows (Mark)
     Window.cc
   * Update titlebar buttons on reconfigure (Mark)
     Window.cc/hh
*07/02/22:
   * Make systemtray support XEMBED protocol (Mark)
     Systemtray.cc/hh
*07/02/21:
   * Buttons should only run a command if the mouse was clicked down on the